[package]
name = "text-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
lopdf = { version = "0.31.0", features = ["pom", "pom_parser"] }
